.opsera-clarity-withai-2020-eaa74/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clarity-withai-2020-eaa74
  labels:
    app: clarity-withai-2020-eaa74
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: clarity-withai-2020-eaa74
