.opsera-clarity-withai-2020-eaa74/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clarity-withai-2020-eaa74
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: clarity-withai-2020-eaa74.agent.opsera.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clarity-withai-2020-eaa74
                port:
                  number: 8080
